--- a/Responsive Web Design/Pj05_Personal Portfolio Page/index.html
+++ b/Responsive Web Design/Pj05_Personal Portfolio Page/index.html
@@ -30,21 +30,22 @@
             <h1>Juan Carlos GIRARDINI</h1>
             <h2>Electronic Engineer</h2>
             <hr>
-            <div class="header__data__info">
-                <div class="footer__info__img">
-                    <img src="images/iconEmail.png" alt="Email icon">
-                </div>
-                <p><a href="mailto:">jcgirardini@hotmail.com</a></p>
-            </div>
-            <div class="header__data__info">
-                <div class="footer__info__img">
-                    <img src="images/iconPhone.png" alt="Phone icon">
-                </div>
-                <p><a href="https://wa.me/5493515180622" target="_blank" rel="noopener noreferrer">+54 9 351 518
-                        0622</a>
-                </p>
-
-            </div>
+            <ul>
+                <li class="header__data__info">
+                    <div class="header__info__img">
+                        <img src="images/iconEmail.png" alt="Email icon">
+                    </div>
+                    <p><a href="mailto:">jcgirardini@hotmail.com</a></p>
+                </li>
+                <li class="header__data__info">
+                    <div class="header__info__img">
+                        <img src="images/iconPhone.png" alt="Phone icon">
+                    </div>
+                    <p><a href="https://wa.me/5493515180622" target="_blank" rel="noopener noreferrer">+54 9 351 518
+                            0622</a>
+                    </p>
+                </li>
+            </ul>
             <hr>
         </div>
     </header>
@@ -98,7 +99,7 @@
                     <h3>Actually, April 2018 to date</h3>
                     <h4>SPECIALIZED ENGINEERING</h4>
                     <h5>Cordoba Argentina</h5>
-                    <p>Exercise of the profession Electronic Engineer as a freelance with extensive experience in
+                    <p>I worked as an freelance Electronic Engineer, with an extensive experience in
                         automation and maintenance, highlighting the following activities:</p>
                     <ul>
                         <li>Advanced HTML / CSS / JS / ReactJS programming.</li>
@@ -111,32 +112,42 @@
                     <h3>Last job, April 2008 to March 2018</h3>
                     <h4>PROCESS ENGINEERING</h4>
                     <h5>Cordoba Argentina</h5>
-                    <p>Since April 2008, exercise of the profession with a permanent contract as Automated Process Engineer in the Refinery of the Center (Production of meat meal, fats and oils of bovine and vegetable origin).</p>
-                    <p>Responsibility for all the automated processes of the Plant.</p>
-                    <p>Unification of the main process PLCs (Siemens S7-300/400) of the plant in a single project, supervising them through a Scada (Siemens WinCC V7) with redundant servers and distributed clients (PLC and Scada reprogramming)</p>
-                    <p>Virtualization of the Scada system Clients and Servers with VMWare VSphere 6.0</p>
-                    <p>Complete programming of the Yeast Plant process with Control Logix L74 in Plant PAx (Scada FTV 8.1 PlantPAx v3, RSLogix5000 v20.1). Includes virtualized servers in VMWare VSphere 5.5, remote I/O decentralized network, Profibus PA instrumentation network, Profibus DP packaged equipment integration network.</p>
-<ul>
-    <h6>Completed tasks:</h6>
-    <li>Detailed engineering, MV, BT and control electrical works plans</li>
-    <li>Specification sheets, bid evaluation, works inspection,</li>
-    <li>PLC programming, plant PLC back-up program (Siemens, Schneider, Rockwell)</li>
-    <li>Instrumentation</li>
-    <li>Technical assistance to maintenance</li>
-
-</ul>
-                    </li>
+                    <p>Since April 2008, I worked with a permanent contract as Automated Process Engineer in the
+                        Refinery of the Center (Production of meat meal, fats and oils of bovine and vegetable origin).
+                    </p>
+                    <ul>
+                        <li>Responsibility for all the automated processes of the Plant.</li>
+                        <li>Unification of the main process PLCs (Siemens S7-300/400) of the plant in a single project,
+                            supervising them through a Scada (Siemens WinCC V7) with redundant servers and distributed
+                            clients (PLC and Scada reprogramming)</li>
+                        <li>Virtualization of the Scada system Clients and Servers with VMWare VSphere 6.0</li>
+                        <li>Complete electric and control desing, and programming of the Yeast Plant process with
+                            Control Logix L74 in Plant PAx (Scada FTV 8.1 PlantPAx v3, RSLogix5000 v20.1). Includes
+                            virtualized servers in VMWare VSphere 5.5, remote I/O decentralized network, Profibus PA
+                            instrumentation network, Profibus DP packaged equipment integration network.</li>
+                        <li>
+                            <h6>Other tasks:</h6>
+                            <ul>
+                                <li>Detailed engineering, MV, BT and control electrical works plans</li>
+                                <li>Specification sheets, bid evaluation, works inspection,</li>
+                                <li>PLC programming, plant PLC back-up program (Siemens, Schneider, Rockwell)</li>
+                                <li>Instrumentation</li>
+                                <li>Technical assistance to maintenance</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </section>
         <section id="contact">
-            <h2>Contact</h2>
+            <h2>Contact me</h2>
             <ul>
-                <li>Name:</li>
-                <li>Address:</li>
-                <li>Phone:</li>
-                <li>Mobile:</li>
-                <li>Email:</li>
-                <li>Social Networks:</li>
+                <li>Name: <span class="contactInfo">Juan Carlos GIRARDINI</span></li>
+                <li>Address: <span class="contactInfo">Rusconi 620, Alta Gracia, Córdoba, Argentina</span></li>
+                <li>Phone: <span class="contactInfo">+54 3547 42 0561</span></li>
+                <li>Mobile: <span class="contactInfo">+54 9 351 518 0622</span></li>
+                <li>Email: <span class="contactInfo">jcgirardini@hotmail.com</span></li>
+                <li>Social Networks: <span class="contactInfo">@jcgirardini66</span></li>
             </ul>
         </section>
     </main>
